JG-21 Added swagger documentation
