# src/main/kotlin/ru/rsreu/jackal/api/controllers/LobbyController.kt
@@ -6,15 +6,24 @@ import org.springframework.web.bind.annotation.PostMapping
 import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RestController
-import ru.rsreu.jackal.api.services.LobbyService
 import ru.rsreu.jackal.api.controllers.dto.CreateLobbyClientRequest
+import ru.rsreu.jackal.api.services.LobbyService
 import ru.rsreu.jackal.shared_models.responses.CreateLobbyResponse
 
 @RestController
 @RequestMapping("/api/lobby")
 class LobbyController(val service: LobbyService) {
     @PostMapping("/create")
-    fun create(@RequestBody request: CreateLobbyClientRequest, authentication: Authentication): ResponseEntity<CreateLobbyResponse> {
-        return ResponseEntity.ok(service.create(request, authentication.principal.toString().toLong()))
+    fun create(
+        @RequestBody request: CreateLobbyClientRequest,
+        authentication: Authentication
+    ): ResponseEntity<CreateLobbyResponse> {
+        return ResponseEntity.ok(
+            service.create(
+                request.lobbyName,
+                request.lobbyPassword,
+                authentication.principal.toString().toLong()
+            )
+        )
     }
 }
